# NeuralClaude

./: .gitignore  MCP_SETUP.md  NEURAL_MEMORY_PROMPTING_GUIDE.md  QUICKSTART.md  README.md  README.npm.md  STORAGE_README.md  package-lock.json  package.json  sh_release.sh  sh_test_local.sh  test-blocked.js  test-enforcement.js  test-hook-trigger.js  test-hook-visibility.js  test-should-be-blocked.js  test-updated-hooks.js  test-with-memory.js
.github/workflows/: npm-publish.yml
adaptive_memory_data/network_checkpoints/: evolved_config.json  timestamp.txt
neural-llm-memory/: .npmignore  Cargo.toml  README.md  enhance_search.patch  example.js  index.d.ts  index.js  install.sh  integration_verification.rs  package.json  postinstall.js  run_weight_persistence_tests.sh  test_clear_update.wal  test_config_custom.wal  test_drop_in.wal  test_enhanced_search.rs  test_graph_ops.wal  test_hybrid.wal  test_migration_graph.wal  test_weight_persistence.sh
neural-llm-memory/adaptive_memory_data/: memories.json
neural-llm-memory/adaptive_memory_data/network_checkpoints/: adaptive_state.json  checkpoint_shutdown_20250710_225114_metadata.json  checkpoint_shutdown_20250710_225116_metadata.json  checkpoint_shutdown_20250710_225315_metadata.json  checkpoint_shutdown_20250710_225317_metadata.json
neural-llm-memory/benches/: attention_fusion_bench.rs  consciousness_performance.rs  knowledge_graph_bench.rs
neural-llm-memory/consciousness_benchmarks/: Cargo.toml
neural-llm-memory/consciousness_benchmarks/examples/: basic_assessment.rs  neural_claude_test.rs
neural-llm-memory/consciousness_benchmarks/src/: cognitive_tests.rs  consciousness_metrics.rs  learning_assessments.rs  lib.rs  memory_benchmarks.rs  test_runner.rs  validation_criteria.rs
neural-llm-memory/examples/: basic_usage.rs  claude_integration.rs  continual_learning_demo.rs  emotional_demo.rs  metacognition_demo.rs  pattern_integration.rs  persistence_demo.rs  persistent_memory_demo.rs  persistent_storage.rs  self_optimizing_demo.rs  test_embeddings.rs  update_delete_demo.rs
neural-llm-memory/src/: consciousness.rs  consciousness_integration.rs  consolidation.rs  continual_learning.rs  emotional.rs  emotional_integration.rs  emotional_types.rs  lib.rs  napi_bindings.rs
neural-llm-memory/src/adaptive/: adaptive_config.rs  adaptive_memory.rs  adaptive_memory_ext.rs  background_evolver.rs  config_test.rs  enhanced_search.rs  feedback.rs  mod.rs  shutdown_test.rs  usage_collector.rs
neural-llm-memory/src/attention/: fusion.rs  mod.rs
neural-llm-memory/src/embeddings/: cache.rs  config.rs  mod.rs  service.rs  simple_service.rs
neural-llm-memory/src/graph/: algorithms.rs  compatibility.rs  conscious_graph.rs  core.rs  cross_modal.rs  dream_consolidation.rs  index.rs  inference.rs  mod.rs  patterns.rs  storage.rs  temporal_tracker.rs
neural-llm-memory/src/integration/: adaptive_system.rs  learning_sync.rs  mod.rs  pattern_retrieval.rs  pattern_storage.rs
neural-llm-memory/src/memory/: episodic_memory.rs  hybrid_memory_bank.rs  key_value_store.rs  memory_bank.rs  memory_module.rs  mod.rs  persistent_memory_module.rs  persistent_memory_module_ext.rs  persistent_storage.rs  retrieval.rs  storage.rs
neural-llm-memory/src/metacognition/: mod.rs  monitor.rs  strategy.rs
neural-llm-memory/src/nn/: activation.rs  layer.rs  mod.rs  network.rs  tensor.rs
neural-llm-memory/src/nn/layers/: mod.rs  temporal.rs  weight_extraction.rs
neural-llm-memory/src/nn/optimization/: consciousness_cache.rs  mod.rs  simd_attention.rs
neural-llm-memory/src/optimizers/: mod.rs
neural-llm-memory/src/persistence/: checkpoint_example.rs  format.rs  layer_state.rs  mod.rs  network_state.rs
neural-llm-memory/src/self_optimizing/: evaluator.rs  evolution.rs  genome.rs  genome_tests.rs  mod.rs  network_ext.rs  optimizer.rs  optimizer_ext.rs  persistence_ext.rs
neural-llm-memory/src/storage/: binary_storage.rs  file_storage.rs  json_storage.rs  mod.rs  storage_config.rs
neural-llm-memory/src/utils/: mod.rs
neural-llm-memory/test_runner/: Cargo.toml
neural-llm-memory/tests/: README_weight_persistence.md  adaptive_recovery_test.rs  dream_consolidation_test.rs  embeddings_integration_test.rs  evolution_persistence_test.rs  integration_test.rs  optimization_integration_test.rs  persistent_storage_test.rs  phase3_integration_test.rs  phase3_integration_test_simple.rs  phase3_verification_test.rs  save_weights_on_shutdown_test.rs  test_update_delete.rs  wal_persistence_test.rs  weight_persistence_integration_test.rs
neural-llm-memory/tests/compatibility/: backward_compat_test.rs
neural-llm-memory/tests/stress/: concurrent_stress_test.rs
neural-llm-memory/tests/unit/: conscious_graph_test.rs  graph_operations_test.rs
neural-memory-enforcement-kit/: example-settings.json  settings-hooks-snippet.json
neural-memory-enforcement-kit/hooks/: config.json  dashboard.sh
prompts/: v1.md  v2.md
scripts/: bulk_memory_test.py  execute_bulk_test.py  monitor_evolution.sh  publish.sh  track_progress.py
test/: run_adaptive_tests.sh  verify_ml_persistence.py
(+4 files in other folders)
