[package]
name = "neural-llm-memory"
version = "1.0.4"
edition = "2021"
authors = ["Neural Memory Framework"]

[dependencies]
# Core dependencies
ndarray = { version = "0.15", features = ["rayon", "serde"] }
nalgebra = "0.32"
rayon = "1.7"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Memory and caching
dashmap = "5.5"
lru = "0.12"
parking_lot = "0.12"
lazy_static = "1.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# MCP SDK
rmcp = { version = "0.2", features = ["server", "transport-io", "macros"] }
rmcp-macros = "0.2"
anyhow = "1.0"
schemars = "0.8"

# Performance optimization
crossbeam = "0.8"

# Graph dependencies
petgraph = { version = "0.6", features = ["serde-1"] }
hnsw = "0.11"
zstd = "0.13"

# Semantic embedding dependencies
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.3", features = ["tokio"] }
thiserror = "1.0"
tokenizers = { version = "0.20", features = ["onig"] }

# Embedding caching
cacache = "12.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
tempfile = "3.8"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1


[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"


[[example]]
name = "self_optimizing_demo"
path = "examples/self_optimizing_demo.rs"

[[example]]
name = "persistence_demo"
path = "examples/persistence_demo.rs"

[[example]]
name = "continual_learning_demo"
path = "examples/continual_learning_demo.rs"

[[example]]
name = "test_embeddings"
path = "examples/test_embeddings.rs"

[[bench]]
name = "consciousness_performance"
harness = false
